# openBridge

./: README.md
docs/: bom.md  can_protocol.md  canview.md  links.md  logic_lab.md  python.md
documentation/: resources.md
eagle/openbridge/: eagle.epf  openbridge.b#1  openbridge.b#2  openbridge.brd  openbridge.s#2  openbridge.s#3  openbridge.s#4  openbridge.s#5  openbridge.sch
src/: Dockerfile
src/ARDUINO/multi_sender/: multi_sender.ino
src/ARDUINO/working_device_analyzer/: working_device_analyzer.ino
src/ARDUINO/working_wind/: working_wind.ino
src/ARDUINO/working_wind_input/: working_wind_input.ino
src/PYTHON/: csv_serial.py  fake_wind_data.py  requirements.txt  sample_simple.csv  simple_serial.py
src/VERSION 1/ARDUINO/working_wind/: working_wind.ino
src/VERSION 1/ARDUINO/working_wind_input/: working_wind_input.ino
src/VERSION 1/PYTHON/: fake_multi_data.py  sample_multi.csv  sample_simple.csv
src/VERSION 2/: CMakeLists.txt  N2kTypes.h  N2kmessage.cpp  N2kmessage.h  craft_message.h  main.cpp  windows_Serial.cpp  windows_Serial.h
src/VERSION 2/arduino_code/wind_test/: openbridge.h  wind_test.ino
tools/: PGN.json  PGN.py  scrape.py  yacht_device.sh
